--- a/index.css
+++ b/index.css
@@ -63,6 +63,7 @@ button {
 .game p {
   padding: 0.75rem 0;
   font-size: 1.5rem;
+  text-align: center;
 }
 .fieldset {
   height: 50px;
@@ -98,11 +99,9 @@ button {
 .k98 {
   background-color: black;
 }
-
 .invisible {
   display: none;
 }
-
 .hidden {
   background-color: grey;
 }
@@ -116,5 +115,55 @@ button {
   }
   50% {
     transform: rotate(-0.75deg);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  html {
+    letter-spacing: 0.05rem;
+  }
+  body {
+    margin: 0 1rem;
+    max-width: 100vw;
+  }
+  h1 {
+    font-size: 1.5rem;
+    padding: 1.5rem 0;
+  }
+  h2 {
+    font-size: 1.2rem;
+  }
+  p {
+    line-height: 1.25;
+  }
+  button {
+    padding: 0.35rem;
+    border: 1px solid black;
+    box-shadow: grey 2.5px 2.5px;
+  }
+  #winner {
+    margin: 2rem 0;
+  }
+  .description {
+    margin-bottom: 1rem;
+  }
+  .game {
+    border: 2px solid black;
+    box-shadow: grey 2.5px 2.5px;
+  }
+  .game p {
+    padding: 0.25rem 0;
+    font-size: 1rem;
+  }
+  .fieldset {
+    height: 50px;
+    margin: 12px 0;
+  }
+  .field {
+    border: 1px solid black;
+    border-radius: 50%;
+    height: 2rem;
+    width: 2rem;
+    box-shadow: rgb(191, 191, 191) 1px 1px;
   }
 }
