Add a little margin for the game itself

--- a/index.css
+++ b/index.css
@@ -59,6 +59,7 @@ button {
   align-items: center;
   padding: 2rem;
   box-shadow: grey 5px 5px;
+  margin: 2.25rem 0;
 }
 .game p {
   padding: 0.75rem 0;
