--- a/index.css
+++ b/index.css
@@ -24,7 +24,8 @@ body {
 }
 h1 {
   font-size: 3rem;
-  padding: 3rem 0;
+  padding: 3rem 0 1rem;
+  text-align: center;
 }
 h2 {
   padding-bottom: 1.5rem;
@@ -48,7 +49,7 @@ button {
   animation: buzz 0.15s infinite;
 }
 .description {
-  margin-bottom: 3rem;
+  margin: 1rem 3rem;
 }
 .game {
   border: 3px solid black;
@@ -59,7 +60,7 @@ button {
   align-items: center;
   padding: 2rem;
   box-shadow: grey 5px 5px;
-  margin: 2.25rem 0;
+  margin: 0.5rem 0 2.25rem;
 }
 .game p {
   padding: 0.75rem 0;
@@ -124,12 +125,12 @@ button {
     letter-spacing: 0.05rem;
   }
   body {
-    margin: 0 1rem;
+    margin: 0 0.5rem;
     max-width: 100vw;
   }
   h1 {
     font-size: 1.5rem;
-    padding: 1.5rem 0;
+    padding: 1.5rem 0 0.5rem;
   }
   h2 {
     font-size: 1.2rem;
@@ -146,11 +147,12 @@ button {
     margin: 2rem 0;
   }
   .description {
-    margin-bottom: 1rem;
+    margin: 1rem;
   }
   .game {
     border: 2px solid black;
     box-shadow: grey 2.5px 2.5px;
+    margin: 0.5rem 0 1.5rem;
   }
   .game p {
     padding: 0.25rem 0;
